# ssm-dotenv

./: requirements.txt  setup.cfg
src/ssm_dotenv/: __init__.py  cli.py  params.py
