[metadata]
name = ssm-dotenv
version = attr: ssm_dotenv.__version__
license = MIT
license_file = LICENSE
description = manage project dotenv parameters in aws parameter store
author = Jay Luker
author_email = jay_luker@harvard.edu
url = https://github.com/harvard-dce/ssm-dotenv

[options]
package_dir=
    =src
packages = find:

install_requires=
    Click
    boto3
    toml
    ssm-cache

python_requires = >=3.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ssm-dotenv = ssm_dotenv.cli:cli